--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">AndroidKolomiytsev</string>
+    <string name="mass_effect_n7_sign_wallpaper_1080x1920">mass_effect_n7_sign_wallpaper_1080x1920</string>
 </resources>
